--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   </head>
   <body>
     <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <div>
+        <h1>Prework Study Guide</h1>
+        <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+
+      
     </header>
     <main>
       <section class="card" id="html-section">
-
+        <h1>Prework Study Guide</h1>
       <h2>HTML</h2>
       <ul>
         <li>-HTML or Hyper Text Markup Language is a corner stones of coding.</li>
@@ -32,8 +35,11 @@
         <h2>CSS</h2>
         
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Padding indicate the space between the element and the edge of the page</li>
         </ul>
+
       </section>
 
       <section class="card" id="git-section">
