--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <div>
         <h1>Prework Study Guide</h1>
+        <h2>✨ Open the Console to See What's Happening ✨</h2>
         <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
 
       
@@ -61,5 +62,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
